# openworkers-task-executor

./: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.multi  README.md
.cargo/: config.toml
.github/workflows/: docker.yml
src/: db.rs  lib.rs  main.rs  ops.rs
tests/: db_test.rs  integration_test.rs
tests/fixtures/: async_task.js  basic_task.js  error_task.js  es_modules_task.js  return_task.js  wait_until_task.js
