[package]
name = "openworkers-task-executor"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Minimal task executor for OpenWorkers - fetch only, no database"

[features]
default = ["v8"]
v8 = ["dep:openworkers-runtime-v8"]

[dependencies]
# Core types
openworkers-core = { git = "https://github.com/openworkers/openworkers-core", tag = "v0.9.0" }

# Runtime backend (V8)
openworkers-runtime-v8 = { git = "https://github.com/openworkers/openworkers-runtime-v8", tag = "v0.9.0", optional = true }

# Async runtime
tokio = { version = "1.49.0", features = ["full"] }

# HTTP client for fetch
reqwest = { version = "0.13.1", default-features = false, features = ["rustls", "json"] }
bytes = "1.11"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
env_logger = "0.11"
log = "0.4"

# Utilities
uuid = { version = "1.0", features = ["v4"] }
thiserror = "2.0"

[[bin]]
name = "task-executor"
path = "src/main.rs"
