[package]
name = "openworkers-task-executor"
version = "0.11.1"
edition = "2024"
license = "MIT"
description = "Minimal task executor for OpenWorkers - fetch only, no database"

[features]
default = ["nats"]
nats = ["dep:async-nats"]
database = ["dep:sqlx", "dep:dotenvy"]

[dependencies]
# Core types
openworkers-core = { git = "https://github.com/openworkers/openworkers-core", tag = "v0.11.0" }

# Runtime backend (V8) - required
openworkers-runtime-v8 = { git = "https://github.com/openworkers/openworkers-runtime-v8", tag = "v0.11.3", features = ["ptrcomp"] }

# Async runtime
tokio = { version = "1.49.0", features = ["full"] }

# HTTP client for fetch
reqwest = { version = "0.13.1", default-features = false, features = ["rustls", "json"] }
bytes = "1.11"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Logging
env_logger = "0.11"
log = "0.4"

# Utilities
uuid = { version = "1.0", features = ["v4"] }
thiserror = "2.0"

# NATS client (optional)
async-nats = { version = "0.45", optional = true }
futures = "0.3"

# Database (optional)
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "json", "chrono"], optional = true }
dotenvy = { version = "0.15", optional = true }

[dev-dependencies]
tempfile = "3.19"

[[bin]]
name = "task-executor"
path = "src/main.rs"

[[bin]]
name = "snapshot"
path = "bin/snapshot.rs"
